# ratemyhackathons

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md
.agent/: rules.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20260313_crawl_registry.sql  20260313_user_profiles_event_slugs.sql  20260314_event_geocoding.sql  20260314_rmp_ratings.sql  20260315_sponsors_tagvotes.sql
backend/src/: auth.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs
backend/src/models/: company.rs  event.rs  mod.rs  review.rs  sponsor.rs  tag.rs  user.rs
backend/src/routes/: companies.rs  compare.rs  events.rs  mod.rs  reviews.rs  search.rs  tags.rs  users.rs
backend/tests/: config_tests.rs  error_tests.rs  model_tests.rs  pagination_tests.rs  route_tests.rs
codex/: report.md
deploy/: .dockerignore  .env.example  Dockerfile.analytics  Dockerfile.backend  Dockerfile.crawler  Dockerfile.frontend  deploy.sh  docker-compose.yml
services/analytics/: Cargo.toml  README.md
services/analytics/dashboard/: README.md  package.json  vite.config.ts
services/analytics/dashboard/src/: app.css
services/analytics/dashboard/src/lib/: api.ts
services/analytics/dashboard/src/routes/: +layout.svelte  +page.svelte
services/analytics/dashboard/src/routes/crawl/: +page.svelte
services/analytics/dashboard/src/routes/events/: +page.svelte
services/analytics/dashboard/src/routes/reviews/: +page.svelte
services/analytics/src/: db.rs  main.rs
services/analytics/src/routes/: crawl.rs  events.rs  live.rs  mod.rs  reviews.rs
(+86 files in other folders)
