[package]
name = "ratemyhackathons-backend"
version = "0.1.0"
edition = "2024"
description = "RateMyHackathons API — Rust/Actix Web backend"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
validator = { version = "0.19", features = ["derive"] }
ammonia = "4"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
actix-rt = "2"
